--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: training_app
+name: dear_diary
 description: A new Flutter application.
 
 # The following line prevents the package from being accidentally published to
@@ -23,11 +23,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  animated_widgets: ^1.0.6
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.0
+  cupertino_icons: ^1.0.2
 
 dev_dependencies:
   flutter_test:
@@ -45,8 +46,10 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+     - assets/AA.jpg
+     - assets/F.jpg
+     - assets/FF.jpg
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
