--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   flutter:
     sdk: flutter
   animated_widgets: ^1.0.6
+  badges: ^1.1.6
 
 
   # The following adds the Cupertino Icons font to your application.
