--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,10 @@ dependencies:
     sdk: flutter
   animated_widgets: ^1.0.6
   badges: ^1.1.6
+  fcode_bloc: ^0.5.14
+  firebase_core: ^0.7.0
+  firebase_database: ^6.0.0
+  cloud_firestore: ^0.16.0
 
 
   # The following adds the Cupertino Icons font to your application.
