--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,9 +54,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-     - assets/AA.jpg
-     - assets/F.jpg
-     - assets/FF.jpg
+     - assets/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
