--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   flutter_bloc: 6.1.1
   fcode_bloc: ^0.5.14
   firebase_core: ^0.7.0
+  firebase_auth: ^0.20.0+1
   firebase_database: ^6.0.0
   cloud_firestore: ^0.16.0
   provider: ^4.3.3
