--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   provider: ^4.3.3
   fcode_common: ^0.0.15
   email_validator: '^1.0.0'
+  rflutter_alert: ^1.1.0
 
 
   # The following adds the Cupertino Icons font to your application.
